--- a/packages/app/public/index.html
+++ b/packages/app/public/index.html
@@ -8,6 +8,8 @@
     <title>restewoks</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Roboto|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600,700">
   </head>
   <body>
     <noscript>
