--- a/packages/app/public/index.html
+++ b/packages/app/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>restewoks</title>
+    <title>Retros</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Roboto|Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but restewoks doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Retros doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
